release 26-04-18 00:00
feat(): Speicherung der Filtereinstellungen auch beim Fensterwechsel
fix(): MAC Installation
refactor(ui): Versionsanzeige bei Update hervorgehoben